<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="content" translatable="false">Привет, это новая Нетология! Когда-то Нетолония начиналась с интенсивов по онлайн-маркетингу. Затем появились курсыпо дизайну, разработке, аналитике и управлению. Мы растем сами и помогаемрасти студентам от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия - помочь встать на путь роста и начать цепочку перемен -> http://netolo.gy/fyb</string>
    <string name="timer" translatable="false">21 мая 18:36 </string>
    <string name="author" translatable="false">Нетология. Университет интернет профессий</string>
    <string name="view_count" translatable="false">view_count</string>
    <string name="share_post" translatable="false">share_post</string>
    <string name="add_like" translatable="false">add_like</string>
    <string name="get_menu" translatable="false">get_menu</string>
    <string name="post_avatar" translatable="false">post_avatar</string>
</resources>