<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierToButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="postAvatar,content,publishedDate,author"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/postAvatar"
        android:contentDescription="@string/post_avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/post_avatar_drowable" />

    <TextView
        android:id="@+id/content"
        android:textSize="@dimen/textSize_13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postAvatar"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@sample/new_posts.json/data/content" />

    <TextView
        android:id="@+id/publishedDate"
        android:textSize="@dimen/textSize_13sp"
        app:layout_constraintStart_toEndOf="@id/postAvatar"
        app:layout_constraintBottom_toBottomOf="@id/postAvatar"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@sample/new_posts.json/data/published" />

    <TextView
        android:id="@+id/author"
        app:layout_constraintStart_toEndOf="@id/postAvatar"
        app:layout_constraintBottom_toTopOf="@id/publishedDate"
        app:layout_constraintEnd_toStartOf="@id/menu"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginStart="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@sample/new_posts.json/data/author"
        />

    <ImageButton
        android:id="@+id/menu"
        android:background="@android:color/transparent"
        android:contentDescription="@string/get_menu"
        android:layout_width="28dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintBottom_toBottomOf="@id/postAvatar"
        app:layout_constraintTop_toTopOf="@id/postAvatar"
        app:layout_constraintEnd_toEndOf="@id/content"
        />

    <ImageButton
        android:id="@+id/like"
        android:background="@android:color/transparent"
        android:contentDescription="@string/add_like"
        android:layout_width="@dimen/width_48dp"
        android:layout_height="@dimen/height_48dp"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierToButtons"
        />

    <ImageButton
        android:id="@+id/share"
        android:background="@android:color/transparent"
        android:contentDescription="@string/share_post"
        android:layout_width="@dimen/width_48dp"
        android:layout_height="@dimen/height_48dp"
        android:layout_marginStart="72dp"
        app:srcCompat="@drawable/ic_baseline_polyline_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierToButtons"
        />

    <ImageButton
        android:id="@+id/viewCount"
        android:background="@android:color/transparent"
        android:contentDescription="@string/view_count"
        android:layout_width="@dimen/width_48dp"
        android:layout_height="@dimen/height_48dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_visibility_24"
        app:layout_constraintTop_toBottomOf="@id/barrierToButtons"
        />

    <TextView
        android:id="@+id/CountOfLikes"
        android:textSize="@dimen/textSize_13sp"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintEnd_toStartOf="@id/share"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@sample/new_posts.json/data/CountOfLikes" />

    <TextView
        android:id="@+id/CountOfShare"
        android:textSize="@dimen/textSize_13sp"
        app:layout_constraintStart_toEndOf="@id/share"
        app:layout_constraintBottom_toBottomOf="@id/share"
        app:layout_constraintTop_toTopOf="@id/share"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@sample/new_posts.json/data/CountOfShares" />

    <TextView
        android:id="@+id/CountOfView"
        android:textSize="@dimen/textSize_13sp"
        app:layout_constraintStart_toEndOf="@id/viewCount"
        app:layout_constraintBottom_toBottomOf="@id/viewCount"
        app:layout_constraintTop_toTopOf="@id/viewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@sample/new_posts.json/data/CountOfViews" />

</androidx.constraintlayout.widget.ConstraintLayout>